# Mandoline

./: CMakeLists.txt  README  README.md  graph.cpp  graph.hpp  heuristics.cpp  heuristics.hpp  main.cpp  polygon.cpp  polygon.hpp
